# Primordium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/host/: Cargo.toml
crates/host/src/: bridge.rs  gpu.rs  lib.rs  timing.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: camera.rs  lib.rs  picker.rs  ray_march.rs  render_texture.rs  wireframe.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: buffers.rs  lib.rs  pipelines.rs  sparse.rs  stats.rs  tick.rs  uniform.rs
crates/types/: Cargo.toml
crates/types/src/: commands.rs  genome.rs  grid.rs  intent.rs  lib.rs  params.rs  voxel.rs
docs/: agent-prompt.md  architecture.md  milestones.md  project-structure.md  requirements.md  technical-constraints.md  test-strategy.md
shaders/: apply_commands.wgsl  brick_common.wgsl  common.wgsl  intent_declaration.wgsl  pick_voxel.wgsl  ray_march.wgsl  resolve_execute.wgsl  stats_reduction.wgsl  temperature_diffusion.wgsl  update_render_texture.wgsl  wireframe.wgsl
web/: index.html  input.js  style.css  ui.js
